--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,24 @@ body{
     background: #ADA996;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+    height: 100vh;
 }
 header{
     background: -webkit-linear-gradient(to left, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #DBDBDB;
+}
+.slide{
+    position: absolute;
+    background-color: rgba(168, 169, 170, 0.9);
+    width: 70%;
+    top: 0;
+    left: -65%;
+    bottom: 0;
+    z-index: 10;
+    box-shadow: #444 1px 0 6px 2px;
+    transition: .2s ease-in;
+}
+.slide:hover{
+    left: 0;
 }
