--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@ body{
     background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
     height: 100vh;
 }
+#optionBtn{
+    cursor: pointer;
+}
 header{
     background: -webkit-linear-gradient(to left, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -11,15 +14,28 @@ header{
 }
 .slide{
     position: absolute;
-    background-color: rgba(168, 169, 170, 0.9);
-    width: 70%;
-    top: 0;
-    left: -65%;
+    background-color: rgb(255, 255, 255);
+    left: 0;
+    right: 0;
     bottom: 0;
+    top: 100%;
     z-index: 10;
     box-shadow: #444 1px 0 6px 2px;
-    transition: .2s ease-in;
+    transition: .2s ease;
+    opacity: 0;
 }
-.slide:hover{
-    left: 0;
+.slideIn{
+    opacity: 1;
+    top: 48px;
+}
+.menuCard{
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
+    border: none;
+}
+div button{
+    width: 120px;
+    margin: 5px auto;
+    cursor: pointer;
+    border: none;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
 }
