--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,16 @@
+/*
+// Google font
+font-family: 'Source Code Pro', monospace;
+font-family: 'Kalam', cursive;
+font-family: 'Boogaloo', cursive;
+font-family: 'VT323', monospace;
+font-family: 'Ceviche One', cursive; */
+
+*{
+    margin: 0;
+}
 body{
+    font-family: 'Boogaloo', cursive;
     background: #ADA996;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
@@ -29,6 +41,7 @@ header{
     top: 48px;
 }
 .menuCard{
+    font-family: 'Kalam', cursive;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
     border: none;
 }
@@ -38,4 +51,8 @@ div button{
     cursor: pointer;
     border: none;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
+}
+#current-word{
+    /* font-family: 'Source Code Pro', monospace; */
+    font-family: 'VT323', monospace;
 }
