--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,23 @@ body{
     background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
     height: 100vh;
+    overflow: hidden;
+}
+footer{
+    width: 100%;
+    background-color: #333;
+    color: #EEE;
+    text-align: center;
+    padding: 1em;
+}
+footer img{
+    width: 30px;
+    background-color: #EEE;
+    padding: 2px;
+    border-radius: 4px;
+}
+.menuInfo{
+    min-height: 80vh;
 }
 #optionBtn{
     cursor: pointer;
